--- a/code/js/package.json
+++ b/code/js/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "crypto-js": "^3.1.9-1",
+    "json2csv": "^4.0.0",
     "request": "^2.83.0",
     "request-promise": "^4.2.2"
   }
